2012-01-12  Albert Chu <chu11@llnl.gov>

	Merge branch redotemplatedocs

	* libfreeipmi/include/freeipmi/templates/: Redo format.  Update
	OEM motherboard lists.

	*
	libfreeipmi/include/record-format/ipmi-oem-intel-node-manager-cmds.h:
	Update motherboard list.

	* libfreeipmi/: Clean up some comments in various files.
	
2012-01-12  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/sensor-read/ipmi-sensor-read.c
	(_sensor_reading_corner_case_checks): Handle corner case in Sun
	Blade 6000M2.
	
2012-01-11  Albert Chu <chu11@llnl.gov>

	Merge sunbladex6250sensor branch

	* libfreeipmi/sensor-read/ipmi-sensor-read.c
	(_sensor_reading_corner_case_checks): Handle corner case in Sun
	Blade x6250.

	* libfreeipmi/sensor-read/ipmi-sensor-read.c
	(_sensor_reading_corner_case_checks): Slightly alter error code
	return interpretations.
	
2012-01-10  Albert Chu <chu11@llnl.gov>

	* common/toolcommon/tool-config-file-common.c: Fix several config
	file option parsing bugs.
	
2012-01-10  Albert Chu <chu11@llnl.gov>

	* doc/freeipmi-faq.texi: Add conman configuration FAQ example.
	Add terminology, ganglia, nagios info.

2012-01-09  Albert Chu <chu11@llnl.gov>

	* doc/freeipmi-faq.texi: Add powerman configuration FAQ example.
	
2012-01-09  Albert Chu <chu11@llnl.gov>

	* Merge 8250:8352 ipmioemdellgetsysteminfo.

	* ipmi-oem/ipmi-oem-dell.c: Add Dell get-system-info
	'slot-number', 'system-revision', 'embedded-video-status',
	'idrac-info', 'idrac-ipv4-url', 'idrac-gui-webserver-control',
	'cmc-ipv4-url', 'cmc-ipv6-info', 'cmc-ipv6-url' k eys.  Support
	12G mac addresses.  Support better error messages.
	
2012-01-09  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/: Add re-arm sensor events functions.

	* bmc-device/: Support --rearm-sensor.

	* README, man/freeipmi.7.pre.in: Update description of bmc-device.

2012-01-09  Albert Chu <chu11@llnl.gov>

	* man/ipmi-oem.8.pre.in: Add SDR caching information to specific
	OEM commands.
	
2012-01-08  Albert Chu <chu11@llnl.gov>
